[package]
name = "aoc_2023"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
[dependencies]
arr_macro = "0.2.1"
memoize = "0.4.1"
char_enum_impl = {version="0.1.0", path="char_enum_impl"}
utils = {version="0.1.0", path="utils"}
vec3-rs = "0.1.5"
rand = "0.8.5"

[workspace]
members = ["char_enum_impl", "utils"]
